<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        android:orientation="horizontal">

        <Button
            android:id="@+id/headerBackButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/headerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Data/"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/goals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/goalsHeaderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingLeft="20dp"
            android:text="GOALS"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/goalsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/calorieGoal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/calorieGoalText"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calorie_goal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/calorieGoalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="TextView"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/waterGoal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/waterGoalText"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/water_goal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/waterGoalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="TextView"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>