<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/purple_500"
        android:orientation="horizontal"
        android:scaleY="1.25">

        <Button
            android:id="@+id/headerBackButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="@drawable/ic_baseline_arrow_back_24"
            android:onClick="backArrowOnClick"
            android:scaleX="0.4"
            android:scaleY="0.4" />

        <TextView
            android:id="@+id/headerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Exercise"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="22dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarSection">

            <!-- calorie calculation -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calorie_calculations">

                <TextView
                    android:id="@+id/calorie_goal_number"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingLeft="25dp"
                    android:layout_marginLeft="12dp"
                    android:textAlignment="center"
                    android:paddingRight="25dp"
                    android:textSize="22dp"
                    android:text="1200"
                    android:textStyle=""
                    android:textColor="@color/purple_700"/>

                <TextView
                    android:id="@+id/calorie_goal"
                    android:layout_width="125dp"
                    android:layout_marginLeft="12dp"
                    android:layout_height="25dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textAlignment="center"
                    android:text="@string/Goal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/calorie_calculation_text_size"
                    android:layout_below="@id/calorie_goal_number"/>

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="105dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_toRightOf="@id/calorie_goal"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/calorie_food_number"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:paddingTop="25dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textSize="22dp"
                    android:text="1200"
                    android:textColor="@color/purple_700"
                    android:layout_toRightOf="@id/minus"/>

                <TextView
                    android:id="@+id/calories_consumed"
                    android:layout_width="125dp"
                    android:layout_height="25dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textAlignment="center"
                    android:text="@string/Food"
                    android:textColor="@color/black"
                    android:textSize="@dimen/calorie_calculation_text_size"
                    android:layout_toRightOf="@id/minus"
                    android:gravity="center"
                    android:layout_below="@id/calorie_food_number"/>

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="105dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_toRightOf="@id/calories_consumed"
                    android:src="@drawable/ic_add" />

                <TextView
                    android:id="@+id/calorie_exercise_number"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textAlignment="center"
                    android:textSize="22dp"
                    android:text="0"
                    android:textColor="@color/purple_700"
                    android:layout_toRightOf="@id/add"/>

                <TextView
                    android:id="@+id/calories_burned"
                    android:layout_width="125dp"
                    android:layout_height="25dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textAlignment="center"
                    android:text="@string/exercise"
                    android:textColor="@color/black"
                    android:textSize="@dimen/calorie_calculation_text_size"
                    android:layout_toRightOf="@id/add"
                    android:gravity="center"
                    android:layout_below="@id/calorie_exercise_number"/>

                <ImageView
                    android:id="@+id/equals"
                    android:layout_width="wrap_content"
                    android:layout_height="105dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_toRightOf="@id/calories_burned"
                    android:src="@drawable/ic_equals"/>

                <TextView
                    android:id="@+id/calories_remaining_number"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textAlignment="center"
                    android:textSize="22dp"
                    android:text="0"
                    android:textColor="@color/purple_700"
                    android:layout_toRightOf="@id/equals"/>

                <TextView
                    android:id="@+id/calories_remaining"
                    android:layout_width="125dp"
                    android:layout_height="25dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:textAlignment="center"
                    android:text="@string/Remaining"
                    android:textColor="@color/black"
                    android:textSize="@dimen/calorie_calculation_text_size"
                    android:layout_toRightOf="@id/equals"
                    android:gravity="center"
                    android:layout_below="@id/calories_remaining_number"/>

                <TextView
                    android:id="@+id/exerciseHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="2.5dp"
                    android:paddingBottom="2.5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:text="@string/Exercise"
                    android:layout_below="@id/calorie_goal"/>

                <TextView
                    android:id="@+id/exerciseCalories"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="500dp"
                    android:paddingRight="25dp"
                    android:paddingTop="2.5dp"
                    android:gravity="right"
                    android:paddingBottom="2.5dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:layout_below="@id/calorie_goal"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/exerciseList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/exerciseHeader"/>

                <Button
                    android:id="@+id/exerciseButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Exercise"
                    android:layout_below="@id/exerciseList"
                    android:onClick="addExerciseOnClick"/>

                <Button
                    android:id="@+id/exerciseSummaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/exerciseButton"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="-61dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="25dp"
                    android:background="@color/purple_500"
                    android:onClick="exerciseSummaryOnClick"
                    android:padding="@dimen/view_summary_button_padding"
                    android:text="Exercise Summary"
                    android:textColor="@color/white" />

        </RelativeLayout></RelativeLayout>
    </ScrollView>
</LinearLayout>